<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:visibility="visible"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:background="@drawable/raduis_10"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                android:layout_width="70dp"
                android:layout_height="70dp">
                <ImageView
                    app:srcCompat="@drawable/default_male"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/image_view_profile" />
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/please_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/or_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button

                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/header_sign_in"
                android:layout_gravity="left"
                android:background="@drawable/raduis_10"
                android:text="@string/login_button"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
            <Button
                android:layout_marginRight="10dp"

                android:layout_weight="1"
                android:id="@+id/header_sign_up"
                android:layout_gravity="left"
                android:background="@drawable/raduis_10"
                android:text="@string/registre_button"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_user">
        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:background="@drawable/raduis_10"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_width="70dp"
                android:layout_height="70dp">
                <ImageView
                    app:srcCompat="@drawable/default_male"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/header_image_profile" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/header_text_view_name"
                    android:layout_margin="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="Full name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/header_text_view_email"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="exemple@exemple.com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:gravity="left"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:id="@+id/header_profile"
                android:layout_margin="5dp"
                android:background="@drawable/raduis_10"
                android:text="Profile"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
            <Button
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:id="@+id/header_logout"
                android:layout_margin="5dp"
                android:background="@drawable/raduis_10"
                android:text="logout"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
