<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.AboutActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="20dp"
            android:src="@mipmap/ic_launcher"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <TextView
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textAlignment="center"
            android:paddingBottom="30dp"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/border_line_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="45dp">
                        <ImageView
                            app:srcCompat="@drawable/ic_mail"
                            android:tint="@color/colorPrimaryDark"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center|left"
                        android:orientation="vertical"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:layout_height="45dp">
                        <TextView
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="E-mail:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:onClick="BrowseEmail"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="15sp"
                            android:text="@string/app_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/border_line_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="45dp">
                        <ImageView
                            app:srcCompat="@drawable/ic_public"
                            android:tint="@color/colorPrimaryDark"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center|left"
                        android:orientation="vertical"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="Web Site:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:onClick="Browse"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="15sp"
                            android:text="@string/app_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/border_line_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="45dp">
                        <ImageView
                            app:srcCompat="@drawable/ic_facebook"
                            android:tint="@color/colorPrimaryDark"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center|left"
                        android:orientation="vertical"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="Facebook:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="15sp"
                            android:onClick="Browse"
                            android:text="@string/app_facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/border_line_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="45dp">
                        <ImageView
                            app:srcCompat="@drawable/ic_tiwtter"
                            android:tint="@color/colorPrimaryDark"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center|left"
                        android:orientation="vertical"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="Twitter:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:onClick="Browse"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="15sp"
                            android:text="@string/app_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/border_line_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="45dp">

                        <ImageView
                            app:srcCompat="@drawable/ic_instagram"
                            android:tint="@color/colorPrimaryDark"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:id="@+id/imageView2" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center|left"
                        android:orientation="vertical"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="Instagram:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView" />

                        <TextView
                            android:onClick="Browse"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="15sp"
                            android:text="@string/app_instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
